--- a/src/App.css
+++ b/src/App.css
@@ -3,16 +3,17 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 12s ease;
   }
 }
 
+/* currently not being in use */
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -28,7 +29,8 @@
   color: #61dafb;
 }
 
-.App-intro {
+.App-background {
+  background-color: #282c34;
   font-size: large;
   display: inline-block;
 }
@@ -38,7 +40,7 @@
     transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(540deg);
   }
 }
 
